Add genetic algorithm & fitness function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ html>
   <script language="javascript" type="text/javascript" src="../../node_modules/matrix.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <script language="javascript" type="text/javascript" src="bird.js"></script>
+  <script language="javascript" type="text/javascript" src="ga.js"></script>
   <script language="javascript" type="text/javascript" src="Pipe.js"></script>
 </head>
 
