--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@ html>
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
   <script src="https://liquidcarrot.io/carrot/cdn/0.2.27/carrot.js"></script>
-  <script language="javascript" type="text/javascript" src="../../node_modules/nn.js"></script>
-  <script language="javascript" type="text/javascript" src="../../node_modules/matrix.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="main.js"></script>
   <script language="javascript" type="text/javascript" src="bird.js"></script>
   <script language="javascript" type="text/javascript" src="ga.js"></script>
   <script language="javascript" type="text/javascript" src="Pipe.js"></script>
