--- a/index.html
+++ b/index.html
@@ -8,48 +8,48 @@
    <script language="javascript" type="text/javascript" src="main.js"></script>
   <script language="javascript" type="text/javascript" src="ga.js"></script>
   <script language="javascript" type="text/javascript" src="bird.js"></script>
-  <script language="javascript" type="text/javascript" src="pipe.js"></script>
-  <style> 
+  <script language="javascript" type="text/javascript" src="Pipe.js"></script>
+  <style>
 		.carrot
 		{
 			position: absolute;
-			top: 10px; 
+			top: 10px;
 			left: 60px;
 		}
 		.flap
 		{
 			position: relative;
-			bottom: -75px; 
+			bottom: -75px;
 		}
 		.slider
 		{
 			position: relative;
 			left: 0px;
-			bottom: -20px; 
+			bottom: -20px;
 		}
     .rightnum
 		{
 			position: relative;
 			left: 0px;
-			bottom: 5px; 
+			bottom: 5px;
 		}
     .high
 		{
 			position: relative;
 			left: 0px;
-			bottom: -30px; 
+			bottom: -30px;
 		}
     .all
 		{
 			position: relative;
 			left: 0px;
-			bottom: -15px; 
+			bottom: -15px;
 		}
     .best
 		{
 			position: relative;
 			left: 0px;
-			bottom: -30px; 
+			bottom: -30px;
 		}
 		
 	</style>
@@ -62,7 +62,7 @@
   <p>
     
      
-      speed: <input id="speedSlider" type="range" min="1" max="10" value="1" > 
+      speed: <input id="speedSlider" type="range" min="1" max="10" value="1" >
       <span id="speed"  class="rightnum">1</span>
     <br/> high score: <span id="hs"  >0</span>
     <br/> all time high score: <span id="ahs"  >0</span>
