--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <script language="javascript" type="text/javascript" src="main.js"></script>
   <script language="javascript" type="text/javascript" src="ga.js"></script>
   <script language="javascript" type="text/javascript" src="bird.js"></script>
-  <script language="javascript" type="text/javascript" src="pipe.js"></script>
+  <script language="javascript" type="text/javascript" src="Pipe.js"></script>
   <style> 
 		.carrot
 		{
